Style fixes (#178)
* Fix spacing in tags list

* Fix mobile library entry overlap

* Fix overflow hack

* Fix margin on settings page

* Fix blocking alignment

* Reset top margins on affected pages

* Fix user dropdown positioning

* Fix quick update margin

* Fix extra scroll created by hack

--- a/app/styles/base/_shame.scss
+++ b/app/styles/base/_shame.scss
@@ -74,8 +74,25 @@ body {
 }
 
 // Need to find the cause of horizontal scroll on mobile devices
-.container {
-  .global-container{
-    overflow-x: hidden;
-  }
+@media (max-width: 554px) {
+    .global-container {
+      overflow-x: hidden;
+    }
+    // Allow scrolling on the reports page until the overflow hack is no longer needed
+    .user-reports {
+      overflow-x: auto;
+    }
+    // Hide extra whitespace created by the overflow hack
+    body {
+      padding-top: 55px;
+    }
+    .settings--header {
+      margin-top: 0;
+    }
+    .trending-banner {
+      margin-top: 0;
+    }
+    .feed-container {
+      overflow-y: hidden;
+    }
 }
