--- a/app/styles/pages/_settings.scss
+++ b/app/styles/pages/_settings.scss
@@ -30,8 +30,8 @@
   margin-left: -11px;
   padding: 0;
   list-style-type: none;
-  .list-item {
-    display: inline-block;
+  @media (max-width: 554px) {
+    margin-left: 0;
   }
   a {
     font-family: $base-font-family;
@@ -128,6 +128,9 @@
     position: relative;
     top: 3px;
     right: -5px;
+    @media (max-width: 554px) {
+      right: 15px;
+    }
   }
 }
 .notification-settings--item {
