--- a/app/styles/pages/_library.scss
+++ b/app/styles/pages/_library.scss
@@ -136,10 +136,8 @@
   .entry-indicators, .entry-progress, .entry-rating, .entry-type {
     display: inline-block;
     @media (max-width: 992px) {
-      width: 33.3%;
       margin: 0;
       padding: 0;
-      text-align: center;
     }
   }
   .entry-right {
@@ -149,7 +147,6 @@
     @media (max-width: 992px) {
       border-top: 1px solid #eee;
       margin-top: 11px;
-      text-align: left;
     }
   }
   .entry-rating {
