--- a/app/styles/pages/_media-pages.scss
+++ b/app/styles/pages/_media-pages.scss
@@ -393,9 +393,7 @@
     li {
       display: inline-block;
       font-size: 12px;
-      @media (max-width: 767px) {
-        margin-bottom: 5px;
-      }
+      margin-bottom: 5px;
     }
   }
 }
